[dsmr] Fix handling problem reading gasmeter (#9736)
* [dsmr] Fix handling problem reading gasmeter

The gasmeter seem to return an invalid date value in some cases.
Possible problems with the meter. This however caused the whole meter readings to be ignored, while it should only ignore the single problem value.

Signed-off-by: Hilbrand Bouwkamp <hilbrand@h72.nl>

* [dsmr] Make eclipse happy again.

Don't ask...

Signed-off-by: Hilbrand Bouwkamp <hilbrand@h72.nl>

* [dsmr] Removed sat warnings

Removed usage of apache library and added NonNullByDefault to test classes..

Signed-off-by: Hilbrand Bouwkamp <hilbrand@h72.nl>
Signed-off-by: John Marshall <john.marshall.au@gmail.com>